added datatables and some animate-on-scroll fun

--- a/src/html/partials/vehicle-dashboard/toll-summary.html
+++ b/src/html/partials/vehicle-dashboard/toll-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-12">
+<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
       <span>Toll History</span>
