--- a/src/html/partials/vehicle-dashboard/billing-summary.html
+++ b/src/html/partials/vehicle-dashboard/billing-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-6">
+<div class="col-xl-6" data-aos="fade-down" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
       <span>Billing History</span>
