--- a/src/html/partials/vehicle-dashboard/fuel-summary.html
+++ b/src/html/partials/vehicle-dashboard/fuel-summary.html
@@ -1,4 +1,9 @@
-<div class="col-xl-12">
+<div
+  class="col-xl-12"
+  data-aos="fade-up"
+  data-aos-easing="ease-in-cubic"
+  data-aos-delay="250"
+>
   <div class="panel">
     <div class="panel-header">
       <span>Fuel Purchases</span>
@@ -46,154 +51,24 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
+      <!-- <div class="table-responsive"> -->
+      <table class="table" id="FuelSummary">
+        <thead>
+          <tr>
             <th>Date</th>
             <th>Odometer</th>
             <th>Driver</th>
+            <th>Merchant</th>
             <th>Merchant Address</th>
             <th>Type</th>
             <th>Quantity</th>
             <th>Unit Cost</th>
             <th>Amount</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>06/19/2019</td>
-              <td>18,118</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  BP PRODUCTS ITASCA, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-warning text-light">UNL GAS</span>
-              </td>
-              <td>22.28</td>
-              <td>$2.998</td>
-              <td>$66.81</td>
-            </tr>
-            <tr>
-              <td>06/13/2019</td>
-              <td>17,690</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  BP PRODUCTS ITASCA, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-warning text-light">UNL GAS</span>
-              </td>
-              <td>21.23</td>
-              <td>$2.798</td>
-              <td>$59.41</td>
-            </tr>
-            <tr>
-              <td>05/31/2019</td>
-              <td>17,281</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  BP PRODUCTS ITASCA, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-warning text-light">UNL GAS</span>
-              </td>
-              <td>20.85</td>
-              <td>$3.095</td>
-              <td>$66.81</td>
-            </tr>
-            <tr>
-              <td>05/26/2019</td>
-              <td>16,897</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  BP PRODUCTS ITASCA, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-warning text-light">UNL GAS</span>
-              </td>
-              <td>19.42</td>
-              <td>$3.259</td>
-              <td>$72.80</td>
-            </tr>
-            <tr>
-              <td>05/24/2019</td>
-              <td>16,612</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  SHELL PLAINFIELD, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-info text-light">WASH</span>
-              </td>
-              <td>1.0</td>
-              <td>$9.00</td>
-              <td>$9.00</td>
-            </tr>
-            <tr>
-              <td>05/21/2019</td>
-              <td>16,516</td>
-              <td>Andrew Griffith</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  BP PRODUCTS ITASCA, IL
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>
-                <span class="badge badge-warning text-light">UNL GAS</span>
-              </td>
-              <td>18.81</td>
-              <td>$3.099</td>
-              <td>$58.29</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <!-- </div> -->
     </div>
   </div>
 </div>
