--- a/src/html/partials/vehicle-dashboard/fuel-tiles.html
+++ b/src/html/partials/vehicle-dashboard/fuel-tiles.html
@@ -1,6 +1,16 @@
-<header class="col-12 text-muted">FUEL</header>
-<div class="col-xl-3 col-md-6">
-  <div class="tile" style="display:none;">
+<!-- <header class="col-12 text-muted">FUEL</header> -->
+<div
+  class="col-xl-3 col-md-6"
+  data-aos="fade-in"
+  data-aos-easing="ease-in-cubic"
+  data-aos-delay="150"
+>
+  <div
+    class="tile"
+    data-aos="fade-in"
+    data-aos-easing="ease-in-cubic"
+    data-aos-delay="150"
+  >
     <div class="tile-dataviz">
       <i class="fas fa-gas-pump fa-fw fa-3x"></i>
     </div>
@@ -20,7 +30,12 @@
   </div>
 </div>
 <div class="col-xl-3 col-md-6">
-  <div class="tile" style="display:none;">
+  <div
+    class="tile"
+    data-aos="fade-in"
+    data-aos-easing="ease-in-cubic"
+    data-aos-delay="300"
+  >
     <div class="tile-dataviz">
       <i class="fas fa-battery-three-quarters fa-fw fa-3x"></i>
     </div>
@@ -40,7 +55,12 @@
   </div>
 </div>
 <div class="col-xl-3 col-md-6">
-  <div class="tile" style="display:none;">
+  <div
+    class="tile"
+    data-aos="fade-in"
+    data-aos-easing="ease-in-cubic"
+    data-aos-delay="450"
+  >
     <div class="tile-dataviz">
       <i class="fas fa-tachometer-alt fa-fw fa-3x"></i>
     </div>
@@ -60,7 +80,12 @@
   </div>
 </div>
 <div class="col-xl-3 col-md-6">
-  <div class="tile" style="display:none;">
+  <div
+    class="tile"
+    data-aos="fade-in"
+    data-aos-easing="ease-in-cubic"
+    data-aos-delay="600"
+  >
     <div class="tile-dataviz">
       <i class="fas fa-dollar-sign fa-fw fa-3x"></i>
     </div>
