--- a/src/html/partials/vehicle-dashboard/inspections-summary.html
+++ b/src/html/partials/vehicle-dashboard/inspections-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-6">
+<div class="col-xl-6" data-aos="fade-up" data-aos-delay="200">
   <div class="panel">
     <div class="panel-header">
       <span>Inspection History</span>
