--- a/src/html/partials/vehicle-dashboard/maintenance-summary.html
+++ b/src/html/partials/vehicle-dashboard/maintenance-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-12">
+<div class="col-xl-12" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
       <span>Recent Maintenance</span>
@@ -37,92 +37,94 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
+      <!-- <div class="table-responsive"> -->
+      <table class="table" id="MaintenanceSummary">
+        <thead>
+          <tr>
             <th>Date</th>
             <th>Odometer</th>
             <th>Vendor</th>
             <th>In Network</th>
             <th>Service</th>
             <th>Amount</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>06/11/2019</td>
-              <td>17,539</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Wash & Detail (Fee)</td>
-              <td>$16.75</td>
-            </tr>
-            <tr>
-              <td>04/24/2019</td>
-              <td>13,644</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Wash & Detail (Fee)</td>
-              <td>$16.75</td>
-            </tr>
-            <tr>
-              <td>04/09/2019</td>
-              <td>12,276</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Sport Tires</td>
-              <td>$625</td>
-            </tr>
-            <tr>
-              <td>02/20/2019</td>
-              <td>8,637</td>
-              <td>Cheerleader Charity Carwash</td>
-              <td><i class="fas fa-times-circle text-danger"></i></td>
-              <td>Wash & Detail (Fee)</td>
-              <td>$24.00</td>
-            </tr>
-            <tr>
-              <td>02/06/2019</td>
-              <td>7,245</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Conventional Lube Oil (Part & Labor)</td>
-              <td>$38.00</td>
-            </tr>
-            <tr>
-              <td>01/07/2019</td>
-              <td>1,659</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Wash & Detail (Fee)</td>
-              <td>$16.00</td>
-            </tr>
-            <tr>
-              <td>01/05/2019</td>
-              <td>1,254</td>
-              <td>L.A. Hotrod</td>
-              <td><i class="fas fa-times-circle text-danger"></i></td>
-              <td>Lowrider Hydraulics</td>
-              <td>$6995.95</td>
-            </tr>
-            <tr>
-              <td>01/04/2019</td>
-              <td>224</td>
-              <td>L.A. Hotrod</td>
-              <td><i class="fas fa-times-circle text-danger"></i></td>
-              <td>Rear Spoiler</td>
-              <td>$495.95</td>
-            </tr>
-            <tr>
-              <td>01/01/2019</td>
-              <td>134</td>
-              <td>EMKAY Motors</td>
-              <td><i class="fas fa-check-circle text-success"></i></td>
-              <td>Turtle Wax</td>
-              <td>$9.95</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- <tr>
+            <td>06/11/2019</td>
+            <td>17,539</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Wash & Detail (Fee)</td>
+            <td>$16.75</td>
+          </tr>
+          <tr>
+            <td>04/24/2019</td>
+            <td>13,644</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Wash & Detail (Fee)</td>
+            <td>$16.75</td>
+          </tr>
+          <tr>
+            <td>04/09/2019</td>
+            <td>12,276</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Sport Tires</td>
+            <td>$625</td>
+          </tr>
+          <tr>
+            <td>02/20/2019</td>
+            <td>8,637</td>
+            <td>Cheerleader Charity Carwash</td>
+            <td><i class="fas fa-times-circle text-danger"></i></td>
+            <td>Wash & Detail (Fee)</td>
+            <td>$24.00</td>
+          </tr>
+          <tr>
+            <td>02/06/2019</td>
+            <td>7,245</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Conventional Lube Oil (Part & Labor)</td>
+            <td>$38.00</td>
+          </tr>
+          <tr>
+            <td>01/07/2019</td>
+            <td>1,659</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Wash & Detail (Fee)</td>
+            <td>$16.00</td>
+          </tr>
+          <tr>
+            <td>01/05/2019</td>
+            <td>1,254</td>
+            <td>L.A. Hotrod</td>
+            <td><i class="fas fa-times-circle text-danger"></i></td>
+            <td>Lowrider Hydraulics</td>
+            <td>$6995.95</td>
+          </tr>
+          <tr>
+            <td>01/04/2019</td>
+            <td>224</td>
+            <td>L.A. Hotrod</td>
+            <td><i class="fas fa-times-circle text-danger"></i></td>
+            <td>Rear Spoiler</td>
+            <td>$495.95</td>
+          </tr>
+          <tr>
+            <td>01/01/2019</td>
+            <td>134</td>
+            <td>EMKAY Motors</td>
+            <td><i class="fas fa-check-circle text-success"></i></td>
+            <td>Turtle Wax</td>
+            <td>$9.95</td>
+          </tr> -->
+        </tbody>
+      </table>
+      <!-- </div> -->
     </div>
   </div>
 </div>
