--- a/src/html/partials/vehicle-dashboard/licensing-summary.html
+++ b/src/html/partials/vehicle-dashboard/licensing-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-6" data-aos="fade-down" data-aos-delay="200">
+<div class="col-xl-6 pt-3 pt-xl-0" data-aos="fade-down" data-aos-delay="200">
   <div class="panel">
     <div class="panel-header">
       <span>Licensing History</span>
@@ -37,44 +37,17 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <th>Exp Date</th>
-            <th>Plate</th>
-            <th>State</th>
-            <th>Title</th>
-            <th>Status</th>
-            <th>Needs</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>03/31/2018</td>
-              <td>V250171</td>
-              <td>IL</td>
-              <td>14086696019</td>
-              <td><span class="badge badge-info">TITLE</span></td>
-              <td><a href="#">Click for Needs</a></td>
-            </tr>
-            <tr>
-              <td>03/31/2017</td>
-              <td>V250171</td>
-              <td>IL</td>
-              <td>14086696019</td>
-              <td><span class="badge badge-success">COMPLETED</span></td>
-              <td><a href="#">Click for Needs</a></td>
-            </tr>
-            <tr>
-              <td>03/31/2016</td>
-              <td>V250171</td>
-              <td>IL</td>
-              <td>14086696019</td>
-              <td><span class="badge badge-success">COMPLETED</span></td>
-              <td><a href="#">Click for Needs</a></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <table class="table" id="LicensingSummary" style="width:100%;">
+        <thead>
+          <th>Exp Date</th>
+          <th>Plate</th>
+          <th>State</th>
+          <th>Title</th>
+          <th>Status</th>
+          <th>Needs</th>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 </div>
