--- a/src/html/partials/vehicle-dashboard/toll-summary.html
+++ b/src/html/partials/vehicle-dashboard/toll-summary.html
@@ -37,189 +37,16 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <th>Vehicle Number</th>
-            <th>Date / Time</th>
-            <th>Description</th>
-            <th>Location</th>
-            <th>Amount</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>E05016</td>
-              <td>17-MAY-2019 17:01:50</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389208 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Boughton Rd. (Main)</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>16-MAY-2019 08:28:01</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389854 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Army Trail Rd.</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>16-MAY-2019 17:53:35</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389585 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Eola Rd.</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>15-MAY-2019 17:30:26</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389979 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Boughton Rd. (Main)</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>14-MAY-2019 08:02:43</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389693 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Army Trail Rd.</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>14-MAY-2019 17:01:50</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389658 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Boughton Rd. (Main)</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>13-MAY-2019 08:28:01</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389966 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Army Trail Rd.</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>10-MAY-2019 17:53:35</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389128 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Eola Rd.</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>10-MAY-2019 17:30:26</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389207 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Boughton Rd. (Main)</td>
-              <td>$0.95</td>
-            </tr>
-            <tr>
-              <td>E05016</td>
-              <td>08-MAY-2019 08:02:43</td>
-              <td>
-                <a
-                  href="https://maps.google.com/"
-                  rel="noopener noreferrer"
-                  target="_blank"
-                  class="text-decoration-none"
-                >
-                  Toll Event 413389206 : Illinois Tollway
-                  <i class="fas fa-fw fa-map-marker-alt"></i>
-                </a>
-              </td>
-              <td>Army Trail Rd.</td>
-              <td>$0.95</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <table class="table" id="TollSummary" style="width:100%;">
+        <thead>
+          <th>Date/Time</th>
+          <th>Vehicle Number</th>
+          <th>Description</th>
+          <th>Location</th>
+          <th>Amount</th>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 </div>
