--- a/src/html/partials/vehicle-dashboard/violations-summary.html
+++ b/src/html/partials/vehicle-dashboard/violations-summary.html
@@ -14,19 +14,18 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <th>Date</th>
-            <th>Type</th>
-            <th>Violation #</th>
-            <th>State</th>
-            <th>Amount</th>
-            <th>Paid On</th>
-            <th>Image</th>
-          </thead>
-          <tbody>
-            <tr>
+      <!-- <div class="table-responsive"> -->
+      <table class="table" id="ViolationSummary" style="width:100%;">
+        <thead>
+          <th>Date</th>
+          <th>Date Paid</th>
+          <th>Type</th>
+          <!-- <th>Violation #</th> -->
+          <th>Amount</th>
+          <th>Image</th>
+        </thead>
+        <tbody>
+          <!-- <tr>
               <td>09/30/2016</td>
               <td>
                 <span class="badge badge-warning text-light">PARKING</span>
@@ -36,7 +35,9 @@
               <td>$75.00</td>
               <td>12/28/2016</td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
             <tr>
@@ -47,7 +48,9 @@
               <td>$100.00</td>
               <td>11/28/2016</td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
             <tr>
@@ -60,7 +63,9 @@
               <td>$35.00</td>
               <td></td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
             <tr>
@@ -73,7 +78,9 @@
               <td>$100.00</td>
               <td></td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
             <tr>
@@ -86,7 +93,9 @@
               <td>$100.00</td>
               <td></td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
             <tr>
@@ -99,12 +108,16 @@
               <td>$100.00</td>
               <td></td>
               <td>
-                <a href="#" class="text-decoration-done">Click to View</a>
+                <a href="#!" class="text-decoration-done violation-image"
+                  >Click to View</a
+                >
               </td>
             </tr>
-          </tbody>
-        </table>
-      </div>
+          </tbody> -->
+        </tbody>
+      </table>
+
+      <!-- </div> -->
     </div>
   </div>
 </div>
