--- a/src/html/partials/vehicle-dashboard/billing-summary.html
+++ b/src/html/partials/vehicle-dashboard/billing-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-6" data-aos="fade-down" data-aos-delay="100">
+<div class="col-xl-6 pb-3 pb-xl-0" data-aos="fade-down" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
       <span>Billing History</span>
@@ -37,54 +37,15 @@
       </div>
     </div>
     <div class="panel-body">
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <th>Invoice</th>
-            <th>Bill Date</th>
-            <th>Bill For Date</th>
-            <th>Description</th>
-            <th>Amount</th>
-          </thead>
-          <tbody>
-            <tr>
-              <td>AZ7668</td>
-              <td>11/2018</td>
-              <td>11/2018</td>
-              <td>FMS Billing</td>
-              <td>$10.59</td>
-            </tr>
-            <tr>
-              <td>AZ5519</td>
-              <td>11/2018</td>
-              <td>10/2018</td>
-              <td>Rental Billing</td>
-              <td>($62.28)</td>
-            </tr>
-            <tr>
-              <td>AZ5519</td>
-              <td>11/2018</td>
-              <td>10/2018</td>
-              <td>Rental Billing</td>
-              <td>($12.45)</td>
-            </tr>
-            <tr>
-              <td>AZ3386</td>
-              <td>10/2018</td>
-              <td>09/2018</td>
-              <td>FMS Billing</td>
-              <td>$341.84</td>
-            </tr>
-            <tr>
-              <td>AZ1196</td>
-              <td>09/2018</td>
-              <td>09/2018</td>
-              <td>Rental Billing</td>
-              <td>($62.28)</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <table class="table" id="BillingSummary" style="width:100%;">
+        <thead>
+          <th>Bill Date</th>
+          <th>Description</th>
+          <th>Amount</th>
+          <th>Invoice</th>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 </div>
