--- a/src/html/partials/vehicle-dashboard/fuel-summary.html
+++ b/src/html/partials/vehicle-dashboard/fuel-summary.html
@@ -51,8 +51,7 @@
       </div>
     </div>
     <div class="panel-body">
-      <!-- <div class="table-responsive"> -->
-      <table class="table" id="FuelSummary">
+      <table class="table" id="FuelSummary" style="width:100%;">
         <thead>
           <tr>
             <th>Date</th>
@@ -68,7 +67,6 @@
         </thead>
         <tbody></tbody>
       </table>
-      <!-- </div> -->
     </div>
   </div>
 </div>
