vehicle and driver details are now populated from a json response.

--- a/src/html/partials/vehicle-dashboard/driver-summary.html
+++ b/src/html/partials/vehicle-dashboard/driver-summary.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <div class="panel-body row no-gutters">
+    <div class="panel-body row no-gutters" id="DriverSummary">
       <figure class="w-100 col-md-12 col-lg mb-3">
         <img
           src="${require('../../../assets/images/user.jpg')}"
@@ -66,39 +66,39 @@
       </figure>
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Last Name</dt>
-        <dd>GRIFFITH</dd>
+        <dd data-field="last-name"></dd>
         <dt>First Name</dt>
-        <dd>ANDREW</dd>
+        <dd data-field="first-name"></dd>
         <dt>Address Line 1</dt>
-        <dd>EMKAY, INC</dd>
+        <dd data-field="address-1"></dd>
         <dt>Address Line 2</dt>
-        <dd>805 W. THORNDALE AVE</dd>
+        <dd data-field="address-2"></dd>
         <dt>City/State/ZIP</dt>
-        <dd>Itasca, IL 60143</dd>
+        <dd data-field="city-state-zip"></dd>
         <dt>County</dt>
-        <dd>DUPAGE</dd>
+        <dd data-field="county"></dd>
         <dt>Phone</dt>
-        <dd>(630)250-7400</dd>
+        <dd data-field="phone"></dd>
         <dt>Cell</dt>
-        <dd>(630)788-7404</dd>
+        <dd data-field="cell"></dd>
         <dt>Fax</dt>
-        <dd></dd>
+        <dd data-field="fax"></dd>
       </dl>
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Email</dt>
-        <dd>agriffith@emkay.com</dd>
+        <dd data-field="email"></dd>
         <dt>Employee ID</dt>
-        <dd>123456</dd>
+        <dd data-field="employee-id"></dd>
         <dt>Driver Misc 1</dt>
-        <dd></dd>
+        <dd data-field="driver-misc-1"></dd>
         <dt>Driver Misc 2</dt>
-        <dd></dd>
+        <dd data-field="driver-misc-2"></dd>
         <dt>Driver Misc 3</dt>
-        <dd></dd>
+        <dd data-field="driver-misc-3"></dd>
         <dt>Driver Misc 4</dt>
-        <dd></dd>
+        <dd data-field="driver-misc-4"></dd>
         <dt>Selector Level</dt>
-        <dd></dd>
+        <dd data-field="selector-level"></dd>
       </dl>
     </div>
   </div>
