--- a/src/html/partials/vehicle-dashboard/fuel-tiles.html
+++ b/src/html/partials/vehicle-dashboard/fuel-tiles.html
@@ -1,40 +1,10 @@
 <!-- <header class="col-12 text-muted">FUEL</header> -->
-<div
-  class="col-xl-3 col-md-6"
-  data-aos="fade-in"
-  data-aos-easing="ease-in-cubic"
-  data-aos-delay="150"
->
-  <div
-    class="tile"
-    data-aos="fade-in"
-    data-aos-easing="ease-in-cubic"
-    data-aos-delay="150"
-  >
-    <div class="tile-dataviz">
-      <i class="fas fa-gas-pump fa-fw fa-3x"></i>
-    </div>
-    <div class="tile-info">
-      <div class="tile-title">Total Gallons</div>
-      <div
-        class="tile-subtitle countmeup"
-        id="gallonCounter"
-        data-countup-start-val="0"
-        data-countup-decimal-places="2"
-        data-countup-duration="1"
-        data-countup-end-val="983.20"
-      >
-        983.20
-      </div>
-    </div>
-  </div>
-</div>
 <div class="col-xl-3 col-md-6">
   <div
     class="tile"
     data-aos="fade-in"
     data-aos-easing="ease-in-cubic"
-    data-aos-delay="300"
+    data-aos-delay="150"
   >
     <div class="tile-dataviz">
       <i class="fas fa-battery-three-quarters fa-fw fa-3x"></i>
@@ -46,7 +16,7 @@
         id="mpgCounter"
         data-countup-start-val="0"
         data-countup-decimal-places="2"
-        data-countup-duration="1.5"
+        data-countup-duration="1"
         data-countup-end-val="18.36"
       >
         18.36
@@ -59,7 +29,7 @@
     class="tile"
     data-aos="fade-in"
     data-aos-easing="ease-in-cubic"
-    data-aos-delay="450"
+    data-aos-delay="300"
   >
     <div class="tile-dataviz">
       <i class="fas fa-tachometer-alt fa-fw fa-3x"></i>
@@ -71,10 +41,35 @@
         id="odometerCounter"
         data-countup-start-val="0"
         data-countup-decimal-places="0"
-        data-countup-duration="2"
+        data-countup-duration="1.5"
         data-countup-end-val="18118"
       >
         18,118
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-xl-3 col-md-6">
+  <div
+    class="tile"
+    data-aos="fade-in"
+    data-aos-easing="ease-in-cubic"
+    data-aos-delay="450"
+  >
+    <div class="tile-dataviz">
+      <i class="fas fa-gas-pump fa-fw fa-3x"></i>
+    </div>
+    <div class="tile-info">
+      <div class="tile-title">Total Gallons</div>
+      <div
+        class="tile-subtitle countmeup"
+        id="gallonCounter"
+        data-countup-start-val="0"
+        data-countup-decimal-places="2"
+        data-countup-duration="2"
+        data-countup-end-val="983.20"
+      >
+        983.20
       </div>
     </div>
   </div>
