--- a/src/html/partials/vehicle-dashboard/inspections-summary.html
+++ b/src/html/partials/vehicle-dashboard/inspections-summary.html
@@ -6,41 +6,13 @@
     </div>
     <div class="panel-body">
       <div class="table-responsive">
-        <table class="table">
+        <table class="table" id="InspectionSummary" style="width:100%;">
           <thead>
             <th>Date</th>
             <th>Comments</th>
-            <th>View</th>
+            <th>Report</th>
           </thead>
-          <tbody>
-            <tr>
-              <td>04/19/2017</td>
-              <td>Attached is my April inspection report</td>
-              <td>
-                <a href="#!" class="text-decoration-none"
-                  ><i class="fas fa-fw fa-camera"></i
-                ></a>
-              </td>
-            </tr>
-            <tr>
-              <td>02/21/2017</td>
-              <td>original test date Android</td>
-              <td>
-                <a href="#!" class="text-decoration-none"
-                  ><i class="fas fa-fw fa-camera"></i
-                ></a>
-              </td>
-            </tr>
-            <tr>
-              <td>04/19/2017</td>
-              <td>Test orig dates</td>
-              <td>
-                <a href="#!" class="text-decoration-none"
-                  ><i class="fas fa-fw fa-camera"></i
-                ></a>
-              </td>
-            </tr>
-          </tbody>
+          <tbody></tbody>
         </table>
       </div>
     </div>
