--- a/src/html/partials/vehicle-dashboard/vehicle-summary.html
+++ b/src/html/partials/vehicle-dashboard/vehicle-summary.html
@@ -49,43 +49,43 @@
         </div>
       </div>
     </div>
-    <div class="panel-body row no-gutters">
+    <div class="panel-body row no-gutters" id="VehicleSummary">
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Account</dt>
-        <dd>EM102</dd>
+        <dd data-field="account"></dd>
         <dt>Billing Sort</dt>
-        <dd>-----</dd>
+        <dd data-field="billing-sort"></dd>
         <dt>VIN</dt>
-        <dd>1C4SDJET4KCXXX69</dd>
+        <dd class="vin"></dd>
         <dt>Year Make Model</dt>
-        <dd>2019 DODGE DURANGO</dd>
+        <dd data-field="ymm"></dd>
         <dt>Exterior Color</dt>
-        <dd>-----</dd>
+        <dd data-field="ext-color"></dd>
       </dl>
 
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Center</dt>
-        <dd>001</dd>
+        <dd data-field="center"></dd>
         <dt>Center Description</dt>
-        <dd>Executive</dd>
+        <dd data-field="center-description"></dd>
         <dt>Client Vehicle</dt>
-        <dd>123456</dd>
+        <dd data-field="client-vehicle-number"></dd>
         <dt>Status</dt>
-        <dd>ON BILLING</dd>
+        <dd data-field="status"></dd>
         <dt>Category</dt>
-        <dd>Sport Utility - Medium</dd>
+        <dd data-field="vehicle-classification"></dd>
       </dl>
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Department</dt>
-        <dd>I.T.</dd>
+        <dd data-field="department"></dd>
         <dt>Project</dt>
-        <dd></dd>
+        <dd data-field="project"></dd>
         <dt>Division</dt>
-        <dd></dd>
+        <dd data-field="division"></dd>
         <dt>Group</dt>
-        <dd></dd>
+        <dd data-field="group"></dd>
         <dt>Client Use</dt>
-        <dd></dd>
+        <dd data-field="client-use"></dd>
       </dl>
     </div>
   </div>
