--- a/src/html/partials/vehicle-dashboard/driver-summary.html
+++ b/src/html/partials/vehicle-dashboard/driver-summary.html
@@ -1,9 +1,4 @@
-<div
-  class="col-xl-12 py-4"
-  data-aos="fade-in"
-  data-aos-easing="ease-in-cubic"
-  data-aos-delay="150"
->
+<div class="col-xl-12 py-4">
   <div class="panel">
     <div class="panel-header">
       <span>Driver Detail</span>
