--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,7 @@
 // 1. Configuration and Helpers
 @import "abstracts/variables";
 //@import "abstracts/functions";
-//@import "abstracts/mixins";
+@import "abstracts/mixins";
 
 // 2. Vendors
 @import "vendors/bootstrap";
