--- a/src/html/partials/vehicle-dashboard/violations-summary.html
+++ b/src/html/partials/vehicle-dashboard/violations-summary.html
@@ -1,4 +1,4 @@
-<div class="col-xl-6" data-aos="fade-up" data-aos-delay="100">
+<div class="col-xl-6 pb-3 pb-xl-0" data-aos="fade-up" data-aos-delay="100">
   <div class="panel">
     <div class="panel-header">
       <span>Violation History</span>
@@ -14,110 +14,16 @@
       </div>
     </div>
     <div class="panel-body">
-      <!-- <div class="table-responsive"> -->
       <table class="table" id="ViolationSummary" style="width:100%;">
         <thead>
           <th>Date</th>
           <th>Date Paid</th>
           <th>Type</th>
-          <!-- <th>Violation #</th> -->
           <th>Amount</th>
           <th>Image</th>
         </thead>
-        <tbody>
-          <!-- <tr>
-              <td>09/30/2016</td>
-              <td>
-                <span class="badge badge-warning text-light">PARKING</span>
-              </td>
-              <td>9190888918</td>
-              <td>IL</td>
-              <td>$75.00</td>
-              <td>12/28/2016</td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>09/27/2016</td>
-              <td><span class="badge badge-danger text-light">MOVING</span></td>
-              <td>7006971016</td>
-              <td>IL</td>
-              <td>$100.00</td>
-              <td>11/28/2016</td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>02/23/2016</td>
-              <td>
-                <span class="badge badge-warning text-light">PARKING</span>
-              </td>
-              <td>6043825357</td>
-              <td>IL</td>
-              <td>$35.00</td>
-              <td></td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>01/02/2016</td>
-              <td>
-                <span class="badge badge-warning text-light">PARKING</span>
-              </td>
-              <td>6043677083</td>
-              <td>IL</td>
-              <td>$100.00</td>
-              <td></td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>12/23/2015</td>
-              <td>
-                <span class="badge badge-warning text-light">PARKING</span>
-              </td>
-              <td>6043652730</td>
-              <td>IL</td>
-              <td>$100.00</td>
-              <td></td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-            <tr>
-              <td>12/26/2014</td>
-              <td>
-                <span class="badge badge-warning text-light">PARKING</span>
-              </td>
-              <td>7006008408</td>
-              <td>IL</td>
-              <td>$100.00</td>
-              <td></td>
-              <td>
-                <a href="#!" class="text-decoration-done violation-image"
-                  >Click to View</a
-                >
-              </td>
-            </tr>
-          </tbody> -->
-        </tbody>
+        <tbody></tbody>
       </table>
-
-      <!-- </div> -->
     </div>
   </div>
 </div>
