--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,9 +8,9 @@
 @import "vendors/hamburgers";
 
 // 3. Base stuff
-//@import "base/reset";
+@import "base/base";
 @import "base/fonts";
-//@import "base/helpers";
+//@import "base/reset";
 
 // 4. Layout-related sections
 @import "layout/altbar";
