pulling all data from json requests

--- a/src/html/partials/vehicle-dashboard.html
+++ b/src/html/partials/vehicle-dashboard.html
@@ -1,6 +1,7 @@
-<h1 class="jumbotron display-4 mt-3">Vehicle Dashboard</h1>
+<h1 id="VehicleDashboardHeader">Vehicle Dashboard</h1>
+<section id="LicensingTiles" class="row" style="min-height:100px;"></section>
 <section
-  class="row pb-4"
+  class="row py-4"
   data-aos="zoom-in-down"
   data-aos-easing="ease-in-cubic"
   data-aos-delay="0"
