--- a/src/html/partials/vehicle-dashboard/driver-summary.html
+++ b/src/html/partials/vehicle-dashboard/driver-summary.html
@@ -61,39 +61,37 @@
       </figure>
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Last Name</dt>
-        <dd data-field="last-name"></dd>
+        <dd data-field="driver_last_name"></dd>
         <dt>First Name</dt>
-        <dd data-field="first-name"></dd>
+        <dd data-field="driver_first_name"></dd>
         <dt>Address Line 1</dt>
-        <dd data-field="address-1"></dd>
+        <dd data-field="driver_address_1"></dd>
         <dt>Address Line 2</dt>
-        <dd data-field="address-2"></dd>
+        <dd data-field="driver_address_2"></dd>
         <dt>City/State/ZIP</dt>
-        <dd data-field="city-state-zip"></dd>
+        <dd data-field="driver_city_region_postal"></dd>
         <dt>County</dt>
-        <dd data-field="county"></dd>
+        <dd data-field="driver_county"></dd>
         <dt>Phone</dt>
-        <dd data-field="phone"></dd>
+        <dd data-field="driver_phone"></dd>
         <dt>Cell</dt>
-        <dd data-field="cell"></dd>
+        <dd data-field="driver_cell"></dd>
         <dt>Fax</dt>
-        <dd data-field="fax"></dd>
+        <dd data-field="driver_fax"></dd>
       </dl>
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Email</dt>
-        <dd data-field="email"></dd>
+        <dd data-field="driver_email"></dd>
         <dt>Employee ID</dt>
-        <dd data-field="employee-id"></dd>
+        <dd data-field="driver_id"></dd>
         <dt>Driver Misc 1</dt>
-        <dd data-field="driver-misc-1"></dd>
+        <dd data-field="driver_misc_1"></dd>
         <dt>Driver Misc 2</dt>
-        <dd data-field="driver-misc-2"></dd>
+        <dd data-field="driver_misc_2"></dd>
         <dt>Driver Misc 3</dt>
-        <dd data-field="driver-misc-3"></dd>
+        <dd data-field="driver_misc_3"></dd>
         <dt>Driver Misc 4</dt>
-        <dd data-field="driver-misc-4"></dd>
-        <dt>Selector Level</dt>
-        <dd data-field="selector-level"></dd>
+        <dd data-field="driver_misc_4"></dd>
       </dl>
     </div>
   </div>
