--- a/src/html/partials/vehicle-dashboard/vehicle-summary.html
+++ b/src/html/partials/vehicle-dashboard/vehicle-summary.html
@@ -47,40 +47,38 @@
     <div class="panel-body row no-gutters" id="VehicleSummary">
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Account</dt>
-        <dd data-field="account"></dd>
+        <dd data-field="customer_number"></dd>
         <dt>Billing Sort</dt>
-        <dd data-field="billing-sort"></dd>
+        <dd data-field="billing_sort"></dd>
         <dt>VIN</dt>
-        <dd class="vin"></dd>
+        <dd data-field="vin"></dd>
         <dt>Year Make Model</dt>
         <dd data-field="ymm"></dd>
         <dt>Exterior Color</dt>
-        <dd data-field="ext-color"></dd>
+        <dd data-field="vehicle_exterior_color"></dd>
       </dl>
 
       <dl class="dashboard-list col-md-6 col-lg-4">
         <dt>Center</dt>
-        <dd data-field="center"></dd>
+        <dd data-field="customer_center"></dd>
         <dt>Center Description</dt>
-        <dd data-field="center-description"></dd>
+        <dd data-field="customer_center_description"></dd>
         <dt>Client Vehicle</dt>
-        <dd data-field="client-vehicle-number"></dd>
+        <dd data-field="customer_vehicle_number"></dd>
         <dt>Status</dt>
-        <dd data-field="status"></dd>
+        <dd data-field="vehicle_status"></dd>
         <dt>Category</dt>
-        <dd data-field="vehicle-classification"></dd>
+        <dd data-field="vehicle_classification"></dd>
       </dl>
       <dl class="dashboard-list col-md-6 col-lg-4">
-        <dt>Department</dt>
-        <dd data-field="department"></dd>
-        <dt>Project</dt>
-        <dd data-field="project"></dd>
-        <dt>Division</dt>
-        <dd data-field="division"></dd>
-        <dt>Group</dt>
-        <dd data-field="group"></dd>
-        <dt>Client Use</dt>
-        <dd data-field="client-use"></dd>
+        <dt>Customer Use 2</dt>
+        <dd data-field="customer_use_2"></dd>
+        <dt>Customer Use 3</dt>
+        <dd data-field="customer_use_3"></dd>
+        <dt>Customer Use 4</dt>
+        <dd data-field="customer_use_4"></dd>
+        <dt>Customer Use 5</dt>
+        <dd data-field="customer_use_5"></dd>
       </dl>
     </div>
   </div>
