--- a/src/html/partials/vehicle-dashboard/violations-summary.html
+++ b/src/html/partials/vehicle-dashboard/violations-summary.html
@@ -18,7 +18,7 @@
         <thead>
           <tr>
             <th>Date</th>
-            <th>Date Paid</th>
+            <th>Paid</th>
             <th>Type</th>
             <th>Amount</th>
             <th>Image</th>
